SERVER-26098 Bad error message format in config server apply ops